# early-warning-system

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cache/: early_warning.json  rgo_early_warning.json
.github/workflows/: publish-to-auto-release.yml
src/: App.vue  farms.ts  main.ts  status.ts  styles.css  vars.css
src-tauri/: Cargo.toml  rgo_early_warning.json  tauri.conf.json
src-tauri/src/: data_model.rs  lib.rs  main.rs
src/components/: FarmList.vue  IconDelete.vue  IconEdit.vue  Modal.vue  ProductionStatusByFarm.vue  RadioInput.vue
src/views/: ProductionStatusByFarm.vue
